third_party/rust/extend/tests/compile_fail/supertraits_are_actually_included.stderr
error[E0277]: the trait bound `String: MyTrait` is not satisfied
 --> $DIR/supertraits_are_actually_included.rs:6:6
  |
5 | #[ext(supertraits = MyTrait)]
  |                     ------- required by this bound in `StringExt`
6 | impl String {
  |      ^^^^^^
  |      |
  |      the trait `MyTrait` is not implemented for `String`
  |      required by a bound in this
